# trainer

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  OWNERS  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum
api/python_api/: README.md  pyproject.toml
api/python_api/kubeflow_trainer_api/: __init__.py
api/python_api/kubeflow_trainer_api/models/: __init__.py  io_k8s_api_autoscaling_v2_container_resource_metric_source.py  io_k8s_api_autoscaling_v2_container_resource_metric_status.py  io_k8s_api_autoscaling_v2_external_metric_source.py  io_k8s_api_autoscaling_v2_external_metric_status.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_behavior.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_condition.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_list.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_spec.py  io_k8s_api_autoscaling_v2_horizontal_pod_autoscaler_status.py  io_k8s_api_autoscaling_v2_hpa_scaling_rules.py  io_k8s_api_autoscaling_v2_metric_identifier.py  io_k8s_api_autoscaling_v2_metric_spec.py  io_k8s_api_autoscaling_v2_metric_status.py  io_k8s_api_autoscaling_v2_metric_target.py  io_k8s_api_autoscaling_v2_metric_value_status.py  io_k8s_api_autoscaling_v2_object_metric_source.py  io_k8s_api_autoscaling_v2_object_metric_status.py  io_k8s_api_autoscaling_v2_pods_metric_source.py  io_k8s_api_autoscaling_v2_pods_metric_status.py  io_k8s_api_autoscaling_v2_resource_metric_source.py  io_k8s_api_batch_v1_cron_job.py  (+274 more)
(+531 files in other folders)
